--- a/src/components/CurrentWeatherLocation.css
+++ b/src/components/CurrentWeatherLocation.css
@@ -1,7 +1,7 @@
 .weather-selection {
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   flex-direction: column;
   width: 300px;
   padding: 30px;
