--- a/src/components/WeatherDisplay.css
+++ b/src/components/WeatherDisplay.css
@@ -45,7 +45,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   width: 60%;
   height: 200px;
 }
@@ -57,7 +57,7 @@ hr {
 
 .wind {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
 }
